--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.15",
     "@mantine/dropzone": "^6.0.15",
-    "@mantine/hooks": "^6.0.15",
+    "@mantine/modals": "^6.0.15",
     "@tabler/icons-react": "^2.30.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +20,7 @@
     "buffer": "^6.0.3",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
+    "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
