--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.15",
     "@mantine/dropzone": "^6.0.15",
+    "@mantine/hooks": "^6.0.20",
     "@mantine/modals": "^6.0.15",
     "@tabler/icons-react": "^2.30.0",
     "@testing-library/jest-dom": "^5.16.5",
